# PATBasic

./: CMakeLists.txt  LICENSE  test.cpp
patbasic/: test.cpp  test1001.cpp  test1002.cpp  test1003.cpp  test1004.cpp  test1005.cpp  test1006.cpp  test1007.cpp  test1008.cpp  test1009.cpp  test1014.cpp  test1015.cpp  test1016.cpp  test1017.cpp  test1018.cpp  test1019.cpp  test1020.cpp  test1021.cpp  test1022.cpp  test1023.cpp  test1024.cpp  test1025.cpp  test1026.cpp  test1027.cpp  test1028.cpp  test1029.cpp  test1030.cpp  test1031.cpp  test1032.cpp  test1033.cpp  test1034.cpp  test1035.cpp  test1035b.cpp  test1036.cpp  test1037.cpp  test1038.cpp  test1039.cpp  test1040.cpp  test1041.cpp  test1042.cpp  (+45 more)
