cmake_minimum_required(VERSION 3.9)
project(PATBasic2)

set(CMAKE_CXX_STANDARD 11)

add_executable(basic_1001 patbasic/test1001.cpp)
add_executable(basic_1002 patbasic/test1002.cpp)
add_executable(basic_1003 patbasic/test1003.cpp)
add_executable(basic_1004 patbasic/test1004.cpp)
add_executable(basic_1005 patbasic/test1005.cpp)
add_executable(test test.cpp)
